--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,13 +3,13 @@
     android:installLocation="auto"
     android:launchMode="singleTask"
     package="com.mbcdev.nextluas"
-    android:versionCode="15"
-    android:versionName="2.0.6"
+    android:versionCode="16"
+    android:versionName="2.0.7"
     android:windowSoftInputMode="adjustPan" >
 
     <uses-sdk 
       android:minSdkVersion="7"
-      android:targetSdkVersion="14" 
+      android:targetSdkVersion="16" 
     />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -34,9 +34,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
             android:name="com.mbcdev.nextluas.activities.EditPreferenceActivity"
             android:label="@string/app_name" />
+        
+        <activity android:name="com.google.ads.AdActivity"
+              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
         
     </application>
 
