bare minimum to remove dependency from roboguice and to start using new build system

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 # generated files
 bin/
 gen/
+build/
+.gradle/
+gradle/
+.idea/
+gradlew
+gradlew.bat
 
 # Local configuration file (sdk path, etc)
 local.properties
