--- a/LuasTimes/build.gradle
+++ b/LuasTimes/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.7.+'
+        classpath 'com.android.tools.build:gradle:1.1.0'
     }
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
@@ -15,18 +15,18 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile group: 'com.jakewharton', name: 'butterknife', version: '3.0.0'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
-    compile group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.1.Final'
+    compile group: 'com.jakewharton', name: 'butterknife', version: '6.1.0'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.8.2'
+    compile group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '3.2.7.Final'
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    compileSdkVersion 22
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 19
+        minSdkVersion 16
+        targetSdkVersion 22
     }
 
     signingConfigs {
@@ -42,7 +42,7 @@ android {
         release {
             signingConfig signingConfigs.skipdet
 
-            runProguard true
+            minifyEnabled true
             proguardFile getDefaultProguardFile('proguard-android.txt')
             proguardFile 'proguard.txt'
         }
