--- a/LuasTimes/src/main/AndroidManifest.xml
+++ b/LuasTimes/src/main/AndroidManifest.xml
@@ -7,10 +7,6 @@
     android:versionName="2.1.1"
     android:windowSoftInputMode="adjustPan" >
 
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -18,6 +14,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:allowBackup="true"
         android:theme="@style/LtTheme" >
         <activity
             android:name="com.mbcdev.nextluas.activities.NextLuasActivity"
