Add encrypted keystore.

--- a/LuasTimes/build.gradle
+++ b/LuasTimes/build.gradle
@@ -29,14 +29,14 @@ android {
         targetSdkVersion 22
     }
 
-//    signingConfigs {
-//        skipdet {
-//            storeFile file(STORE_FILE)
-//            storePassword STORE_PASSWORD
-//            keyAlias KEY_ALIAS
-//            keyPassword KEY_PASSWORD
-//        }
-//    }
+    signingConfigs {
+        skipdet {
+            storeFile file("./scripts/release.keystore")
+            storePassword ""
+            keyAlias ""
+            keyPassword ""
+        }
+    }
 
     buildTypes {
         release {
