--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ deploy:
     repo: baz8080/LuasTimesDroid
     tags: true
     all_branches: true
+before_install:
+- openssl aes-256-cbc -K $encrypted_338cfeec668d_key -iv $encrypted_338cfeec668d_iv
+  -in scripts/keystore.enc -out scripts/release.keystore -d
