--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,18 @@ android:
   - build-tools-22.0.1
   licenses:
   - android-sdk-license-[0-9a-f]{8}
-script: ./gradlew clean assembleDebug lintDebug
+script: ./gradlew clean assemble lint
 deploy:
   provider: releases
   api_key:
     secure: Ze3W3H4AqGpdV6aEb+DPLwkF10tHpLRfUasaY02cKd6G4cupkXlFxmFy2rJiEsodkZtOyt2T+yaOrL6hevDSsA+ycGdl2WsK5oilTiSVsm11Xdqk9F+Ek+GupNh0gwZNd4IqXkhdm085r9yXqooKnblw8KI6wfLVZ4TcuvNw4xA=
-  file: ./LuasTimes/build/outputs/apk/LuasTimes-debug.apk
+  file:
+  - ./LuasTimes/build/outputs/apk/LuasTimes-debug.apk
+  - ./LuasTimes/build/outputs/apk/LuasTimes-release.apk
   skip_cleanup: true
   on:
     repo: baz8080/LuasTimesDroid
     tags: true
-    all_branches: true
 before_install:
 - openssl aes-256-cbc -K $encrypted_338cfeec668d_key -iv $encrypted_338cfeec668d_iv
   -in scripts/keystore.enc -out scripts/release.keystore -d
