--- a/LuasTimes/build.gradle
+++ b/LuasTimes/build.gradle
@@ -31,7 +31,7 @@ android {
 
     signingConfigs {
         skipdet {
-            storeFile file("./scripts/release.keystore")
+            storeFile file("../scripts/release.keystore")
             storePassword System.getenv("LT_RELEASE_PASSWORD")
             keyAlias System.getenv("LT_RELEASE_ALIAS")
             keyPassword System.getenv("LT_RELEASE_PASSWORD")
