--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ android:
   components:
   - android-22
   - build-tools-22.0.1
+  - extra-android-m2repository
   licenses:
   - android-sdk-license-[0-9a-f]{8}
 script: ./gradlew clean assemble lint
