--- a/LuasTimes/src/main/AndroidManifest.xml
+++ b/LuasTimes/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:allowBackup="true"
         android:theme="@style/LtTheme" >
         <activity
-            android:name="com.mbcdev.nextluas.activities.NextLuasActivity"
+            android:name=".activities.MaterialLuas"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,13 +29,17 @@
             android:name="com.google.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
-            android:name="com.mbcdev.nextluas.activities.ProblemActivity"
+            android:name=".activities.ProblemActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.mbcdev.nextluas.activities.EditPreferenceActivity"
+            android:name=".activities.EditPreferenceActivity"
             android:label="@string/app_name" >
         </activity>
+        <!--<activity-->
+            <!--android:name=".activities.MaterialLuas"-->
+            <!--android:label="@string/title_activity_material_luas" >-->
+        <!--</activity>-->
     </application>
 
 </manifest>
