--- a/LuasTimes/build.gradle
+++ b/LuasTimes/build.gradle
@@ -17,16 +17,20 @@ dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
 
     compile group: 'com.jakewharton', name: 'butterknife', version: '6.1.0'
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.8.2'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.9.1'
 }
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 22
+    }
+
+    lintOptions {
+        abortOnError false
     }
 
     dexOptions {
@@ -49,7 +53,7 @@ android {
         release {
             signingConfig signingConfigs.skipdet
 
-            minifyEnabled true
+            minifyEnabled false
             proguardFile getDefaultProguardFile('proguard-android.txt')
             proguardFile 'proguard.txt'
         }
