--- a/LuasTimes/build.gradle
+++ b/LuasTimes/build.gradle
@@ -3,7 +3,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
@@ -18,15 +19,19 @@ dependencies {
 
     compile group: 'com.jakewharton', name: 'butterknife', version: '6.1.0'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.9.1'
+    compile 'com.google.firebase:firebase-ads:9.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 22
+        applicationId "com.mbcdev.nextluas"
     }
 
     lintOptions {
