--- a/LuasTimes/src/main/AndroidManifest.xml
+++ b/LuasTimes/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.mbcdev.nextluas"
     android:installLocation="auto"
     android:launchMode="singleTask"
-    android:versionCode="020103"
-    android:versionName="2.1.3"
+    android:versionCode="020104"
+    android:versionName="2.1.4"
     android:windowSoftInputMode="adjustPan" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,6 +15,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:allowBackup="true"
+        android:name=".LuasApplication"
         android:theme="@style/LtTheme" >
         <activity
             android:name="com.mbcdev.nextluas.activities.NextLuasActivity"
@@ -25,9 +26,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.google.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
             android:name="com.mbcdev.nextluas.activities.ProblemActivity"
             android:label="@string/app_name" >
