--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 sudo: false
+jdk:
+  - oraclejdk8
 language: android
 android:
   components:
+  - tools
   - android-22
-  - build-tools-23.0.1
+  - build-tools-23.0.3
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
   licenses:
   - android-sdk-license-[0-9a-f]{8}
 script: ./gradlew clean assemble lint
