--- a/LuasTimes/build.gradle
+++ b/LuasTimes/build.gradle
@@ -13,6 +13,8 @@ android {
         minSdkVersion 16
         targetSdkVersion 26
         applicationId "com.mbcdev.nextluas"
+        versionCode 221
+        versionName "2.2.1"
     }
 
     lintOptions {
