--- a/LuasTimes/build.gradle
+++ b/LuasTimes/build.gradle
@@ -1,20 +1,22 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         applicationId "com.mbcdev.nextluas"
-        versionCode 221
-        versionName "2.2.1"
+        versionCode 230
+        versionName "2.3"
     }
 
     lintOptions {
@@ -44,7 +46,9 @@ android {
             proguardFile 'proguard.txt'
         }
     }
-
 }
 
 
+
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
